Nav bar completed
Included css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <nav>
         <div class="nav">
             <div class="nav1">
-                <h2 class ="fa-solid fa-face-smile"></h2>
-<!-- Yhan pe smile face aana he emoji ka font awesome se -->
-                <h1>Adams</h1>
+                <div class="nav1a">
+                    <h2 class ="fa-solid fa-face-smile"></h2>
+                </div>
+                <div class="nav1b">
+                    <h1>Adams</h1>
+                </div>
             </div>
             <div class="nav2">
                 <ul>
