Makes the center of the page
i aplleid html and css to write google, linkedin slack and meta.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/823ae781c1.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
+<div class="container11">
     <nav>
         <div class="nav">
             <div class="nav1">
@@ -34,6 +36,56 @@
             </div>
         </div>
     </nav>
+    <div class = "container1">
+        <div class="container1a">
+            <h2>I'm</h2>
+            <h1>Muhammad Moinuddin</h1>
+            <hr>
+            <p>A freelancer who provides</p>
+            <p>services for digital programmming</p>
+            <p>and design content needs,for</p>
+            <p>all businesses with more than</p>
+            <p>10 years of experice</p>
+        </div>
+        <div class="container1b">
+            <img class="img" src="./Items/images/[removal.ai]_pic2.png" alt="Image">
+        </div>
+        <div class="container1c">
+            <h3>Services</h3>
+            <h2>Let's build quality products in
+            <br>programming and design
+            <br>with my services</h2>
+            <p>Show More</p>
+            <i class="fa-brands fa-facebook fa-2x"></i>
+            <i class="fa-brands fa-twitter fa-2x "></i>
+            <i class="fa-brands fa-instagram fa-2x"></i>
+            <i class="fa-brands fa-pinterest-p fa-2x"></i>
+        </div>
+    </div>
+</div>
+
+<div class="container2">
+    <div class="container2a">
+        <i style="color: blue; ;" class="fa-brands fa-meta">  </i>
+        <span>Meta</span>
+    </div>
+    <div class="container2b">
+        <span style = "color:blue">G</span>
+        <span style = "color:red">o</span>
+        <span style = "color:yellow">o</span>
+        <span style = "color:blue">g</span>
+        <span style = "color:green">l</span>
+        <span style = "color:red">e</span>
+    </div>
+    <div class="container2c">
+        <p class="Linked"></p><span>Linked</span><i style = "color: blue;" class="fa-brands fa-linkedin-in"></i></p>
+    </div>
+    <div class="container2d">
+        <i class="fa-brands fa-slack"><span>Slack</span></i>
+    </div>
+</div>
+
+
 </body>
 </html>
 
