Completed Portfolio Website
Tried to make portfolio website pixel perfect by watching at  this website https://elements.envato.com/adams-personal-portfolio-website-ZD9W7P3

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-<div class="container11">
+<div class="section1">
     <nav>
         <div class="nav">
             <div class="nav1">
@@ -48,22 +48,24 @@
             <p>10 years of experice</p>
         </div>
         <div class="container1b">
-            <img class="img" src="./Items/images/[removal.ai]_pic2.png" alt="Image">
+            <img src = "./Items/moinPic2.png" alt="Image">
         </div>
         <div class="container1c">
             <h3>Services</h3>
             <h2>Let's build quality products in
             <br>programming and design
             <br>with my services</h2>
-            <p>Show More</p>
+            <p>Show More <i class="fa-solid fa-arrow-right"></i>
+            </p>
             <i class="fa-brands fa-facebook fa-2x"></i>
             <i class="fa-brands fa-twitter fa-2x "></i>
             <i class="fa-brands fa-instagram fa-2x"></i>
             <i class="fa-brands fa-pinterest-p fa-2x"></i>
+            
         </div>
     </div>
 </div>
-
+<div class="section2">
 <div class="container2">
     <div class="container2a">
         <i style="color: blue; ;" class="fa-brands fa-meta">  </i>
@@ -85,7 +87,87 @@
     </div>
 </div>
 
-
+<div class="container3">
+    <div class="container3a">
+        <div class="container3a1">
+            <h2>What Can I Do For <br> Your Needs</h2>
+        </div>
+        <div class="container3a2">
+        <p>It is easier to entrust the work to the <br>  experts because they are able to provide <br> the best results with reliable quality</p>
+        </div>
+        <div class="container3a3">
+        <div class="container3aa"> <!-- it i sa child of cont 3a3 and parent of 3a3a and 3a3b -->
+            <div class="container3a3a">
+                <p class="num1">250+ </p>
+                <p class="num1_txt">Projects completed</p>
+            </div>
+            <div class="container3a3b">
+                <p class="num2">100+</p> 
+                <p class="num2_txt">Community Network</p>
+            </div>
+        </div>
+        <div class="container3bb">
+            <div class="container3a3c">
+                <p class="num3">30+</p>
+                <p class="num3_txt">Contract Remote</p>
+            </div>
+            <div class="container3a3d">
+                <p class="num4">10+</p> 
+                <p class="num4_txt">Years of Experience</p>
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="container3b">
+        <div class="container3b1">
+            <img style="width: 150px; height: 100px;" src=".//Items/ui.jpg">
+            <h2>UI/UX Design</h2>
+                <p>117 projects</p>
+                <i class="fa-solid fa-arrow-right"></i>
+                <hr>
+        </div>
+        <div class="container3b2">
+            <img style="width: 150px; height: 100px;" src=".//Items/front_end.jpg">
+            <h2>Front End Development</h2>
+            <p>84 projects</p>
+            <i class="fa-solid fa-arrow-right"></i>
+            <hr>
+        </div>
+        <div class="container3b3">
+            <img style="width: 150px; height: 100px;" src=".//Items/mobile_app.jpg">
+            <h2>Mobile App Development</h2>
+            <p>32 projects</p>
+            <i class="fa-solid fa-arrow-right"></i>
+            <hr>
+        </div>
+    </div>
+</div>
+<div class="container4">
+    <div class="container4a">
+        <i class="fa-solid fa-pen-ruler"></i>
+        <h2>UI/UX Design</h2>
+        <p>Create a beautiful and useful <br> ui display for ease of use of <br> the application for users </p>
+        <span>Show More
+        <i class="fa-solid fa-arrow-right"></i> 
+        </span>
+    </div>
+    <div class="container4b">
+        <i class="fa-sharp fa-solid fa-computer"></i>
+        <h2>Web Programming</h2>
+        <p>Build a quality website with the <br> best technology and optimization <br> on search engines</p>
+        <span>Show More
+            <i class="fa-solid fa-arrow-right"></i>
+            </span>
+    </div>
+    <div class="container4c">
+        <i class="fa-solid fa-mobile-screen-button"></i>                <h2>Mobile Development</h2>
+        <p>Create an app from your own <br> business for a more professional <br> bussiness performance</p>
+        <span>Show More
+            <i class="fa-solid fa-arrow-right"></i>
+            </span>
+    </div>
+</div>
+</div>
 </body>
 </html>
 
