--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>10 years of experice</p>
         </div>
         <div class="container1b">
-            <img src = "./Items/moinPic2.png" alt="Image">
+            <img src = ".//Items/MoinPic2.png" alt="Image">
         </div>
         <div class="container1c">
             <h3>Services</h3>
